# workshop-solana-airdrop

./: Anchor.toml  README.md  package.json
app/: config-overrides.js  index.html  package.json  tailwind.config.ts
app/src/: AirdropContext.tsx  App.tsx  CivicPassContext.tsx  LotteryContext.tsx
app/src/components/: AirdropStep.tsx  CreateMintStep.tsx  IntroStep.tsx  ProfileView.tsx  ScoreView.tsx  Step.tsx
app/src/lib/: AirdropClient.ts  LotteryClient.ts
app/src/lib/types/: workshop_solana_airdrop.ts
programs/workshop-solana-airdrop/: Cargo.toml
programs/workshop-solana-airdrop/src/: lib.rs
programs/workshop-solana-lottery/: Cargo.toml
tests/: workshop-solana-lottery.ts
